add_executable(3_2 3_2.cc)
add_executable(3_4_1 3_4_1.cc)
add_executable(3_4_2 3_4_2.cc)
add_executable(3_5_1 3_5_1.cc)
add_executable(3_5_2 3_5_2.cc)
add_executable(3_6 3_6.cc)
add_executable(3_7 3_7.cc)
add_executable(3_8 3_8.cc)
add_executable(3_9 3_9.cc)
add_executable(3_10 3_10.cc)
add_executable(3_11 3_11.cc)
add_executable(3_14 3_14.cc)
add_executable(3_15 3_15.cc)
add_executable(3_16 3_16.cc)
add_executable(3_17 3_17.cc)
add_executable(3_18 3_18.cc)
add_executable(3_19 3_19.cc)
add_executable(3_20 3_20.cc)
add_executable(3_21 3_21.cc)
add_executable(3_22 3_22.cc)
add_executable(3_23 3_23.cc)
add_executable(3_24 3_24.cc)
add_executable(3_25 3_25.cc)
add_executable(3_31 3_31.cc)
add_executable(3_32 3_32.cc)
add_executable(3_35 3_35.cc)
add_executable(3_36 3_36.cc)
add_executable(3_37 3_37.cc)
add_executable(3_39 3_39.cc)
add_executable(3_40 3_40.cc)
add_executable(3_41 3_41.cc)
add_executable(3_42 3_42.cc)
add_executable(3_43 3_43.cc)
add_executable(3_44 3_44.cc)
add_executable(3_45 3_45.cc)

add_executable(add_using add_using.cc)
add_executable(string_io string_io.cc)
add_executable(string_get_line string_getline.cc)
add_executable(string_size string_size.cc)
add_executable(string_add string_add.cc)
add_executable(cctype cctype.cc)
add_executable(hexify hexify.cc)
add_executable(vector_practice vector_practice.cc)
add_executable(vector_scores vector_scores.cc)
add_executable(array_practice array_practice.cc)
add_executable(cstring_practice cstring_practice.cc)