add_executable(6_3 6_3.cc)
add_executable(6_7 6_7.cc)
add_executable(6_10 6_10.cc)
add_executable(6_12 6_12.cc)
add_executable(6_17 6_17.cc)
add_executable(6_21 6_21.cc)
add_executable(6_22 6_22.cc)
add_executable(6_23 6_23.cc)
add_executable(6_25 6_25.cc)
add_executable(6_27 6_27.cc)
add_executable(6_34 6_34.cc)
add_executable(6_36 6_36.cc)
add_executable(6_38 6_38.cc)
add_executable(6_42 6_42.cc)
add_executable(6_44 6_44.cc)
add_executable(6_47 6_47.cc)
add_executable(6_51 6_51.cc)
add_executable(6_56 6_56.cc)