add_executable(9_13 9_13.cc)
add_executable(9_14 9_14.cc)
add_executable(9_15 9_15.cc)
add_executable(9_16 9_16.cc)
add_executable(9_18 9_18.cc)
add_executable(9_19 9_19.cc)
add_executable(9_20 9_20.cc)
add_executable(9_24 9_24.cc)
add_executable(9_26 9_26.cc)
add_executable(9_27 9_27.cc)
add_executable(9_28 9_28.cc)
add_executable(9_41 9_41.cc)
add_executable(9_43 9_43.cc)
add_executable(9_44 9_44.cc)
add_executable(9_45 9_45.cc)
add_executable(9_46 9_46.cc)
add_executable(9_50 9_50.cc)
