add_executable(1_1 1_1.cc)
add_executable(1_2 1_2.cc)
add_executable(1_3 1_3.cc)
add_executable(1_4 1_4.cc)
add_executable(1_5 1_5.cc)
add_executable(1_6 1_6.cc)
add_executable(1_7 1_7.cc)
add_executable(1_8 1_8.cc)
add_executable(1_9 1_9.cc)
add_executable(1_10 1_10.cc)
add_executable(1_11 1_11.cc)
add_executable(1_12 1_12.cc)
add_executable(1_13_9 1_13_9.cc)
add_executable(1_13_10 1_13_10.cc)
add_executable(1_13_11 1_13_11.cc)
add_executable(1_16 1_16.cc)
add_executable(1_20 Sales_item.h 1_20.cc)
add_executable(1_21 Sales_item.h 1_21.cc)
add_executable(1_22 Sales_item.h 1_22.cc)