add_executable(10_01 10_01.cc)
add_executable(10_02 10_02.cc)
add_executable(10_03 10_03.cc)
add_executable(10_06 10_06.cc)
add_executable(10_09 10_09.cc)
add_executable(10_11 10_11.cc)
add_executable(10_12 10_12.cc)
add_executable(10_14 10_14.cc)
add_executable(10_15 10_15.cc)
add_executable(10_16 10_16.cc)
add_executable(10_17 10_17.cc)
add_executable(10_18 10_18.cc)
add_executable(10_20 10_20.cc)