add_executable(11_03 11_03.cc)
add_executable(11_04 11_04.cc)
add_executable(11_07 11_07.cc)
add_executable(11_08 11_08.cc)
add_executable(11_14 11_14.cc)
add_executable(11_23 11_23.cc)
add_executable(11_31 11_31.cc)
add_executable(11_32 11_32.cc)
add_executable(11_33 11_33.cc)
add_executable(11_38_1 11_38_1.cc)
add_executable(11_38_2 11_38_2.cc)